--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "multer": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+      "vite": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
